Interface spruce up

--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
 
         <div class="row">
             <div class="col-sm-12">
-                <p id="player-info"></p>
+                <p id="player-info">Please enter your name and click Start</p>
             </div>
         </div>
 
         <div class="row">
             <div class="col-sm-4">
-                <div class="player1">
+                <div id="player1Div">
                     <p id="player1" class="player">Player 1</p>
                     <ul>
                         <li><a href="#" id="pl1R">Rock</a></li>
                         <li><a href="#" id="pl1P">Paper</a></li>
                         <li><a href="#" id="pl1S">Scissors</a></li>
                     </ul>
-                    <p>Wins: <span id="win">0</span> Losses: <span id="losses">0</span></p>
+                    <p>Wins: <span id="pl1-win">0</span> Losses: <span id="pl1-losses">0</span></p>
                 </div>
             </div>
 
@@ -52,14 +52,14 @@
             </div>
 
             <div class="col-sm-4">
-                <div class="player2">
+                <div id="player2Div">
                     <p id="player2" class="player">Player 2</p>
                     <ul>
                         <li><a href="#" id="pl2R">Rock</a></li>
                         <li><a href="#" id="pl2P">Paper</a></li>
                         <li><a href="#" id="pl2S">Scissors</a></li>
                     </ul>
-                    <p>Wins: <span id="win">0</span> Losses: <span id="losses">0</span></p>
+                    <p>Wins: <span id="pl2-win">0</span> Losses: <span id="pl2-losses">0</span></p>
                 </div>
             </div>
 
